fixed nav item alignment

--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,16 @@ a:hover {
 nav {
   width: 100%;
   height: 5.938rem;
-  margin: 0 0 2.375rem;
   background-color: #fff;
+  text-align: center;
+  position: relative;
 }
 
 .menu {
   list-style-type: none;
   background-color: #fff;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .menu > li {
@@ -33,10 +36,8 @@ nav {
 }
 
 .header-wrapper {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   background-color: #fff;
+  display: table;
 }
 
 i {
@@ -51,16 +52,13 @@ i {
 header {
   width: 15rem;
   height: 2.313rem;
-  margin: 0.375rem 2.938rem 0.125rem 0;
   font-family: "Montserrat", sans-serif;
   font-size: 25px;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
   background-color: #fff;
   color: #0290ff;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .active {
@@ -167,4 +165,8 @@ svg {
   justify-content: space-between;
   margin: 0 auto;
   padding-left: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
